# numpy-ts

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  TODO  WASM.md  build.ts  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.dtype-coverage.config.ts
.github/workflows/: ci.yml  pr.yml  release.yml
benchmarks/results/: latest-full-large.json  latest-full-pyodide.json  latest-full-small.json  latest-full.json  latest.json
benchmarks/scripts/: compare.ts  dtype-coverage.ts  numpy_benchmark.py  validation.py
benchmarks/src/: analysis.ts  bench-utils.ts  chart-generator.ts  index.ts  js-vs-wasm-chart.ts  python-runner.ts  runtime-runner.ts  runtime-spawner.ts  specs.ts  types.ts  validation.ts  visualization.ts
docs/: changelog.mdx  docs.json  style.css
docs/snippets/: BenchmarkReport.jsx  Playground.jsx  RuntimesReport.jsx  SizeScalingReport.jsx
scripts/: build-wasm.ts  dtype-coverage-report.ts  dtype-coverage-setup.ts  generate-bench-docs.py  generate-full.ts  ndarray-methods.ts  ndim_axes_comprehensive.py  ndim_requirements.py  wasm-size.ts  zig-fn-coverage.ts
src/: index.ts  node.ts
src/common/: dtype.ts  float16-conv.ts  float16-polyfill.d.ts  ndarray-core.ts  storage.ts
src/core/: creation.ts  index.ts  polynomial.ts  shape-extra.ts  statistics.ts  typechecking.ts
src/full/: index.ts  ndarray.ts
tests/: setup-version.ts
wasm-bench/rust/: Cargo.toml  build.sh
wasm-bench/rust/src/: arrayops.rs  binary.rs  convolve.rs  fft.rs  lib.rs  linalg.rs  reduction.rs  simd.rs  sort.rs  unary.rs
(+395 files in other folders)
