[package]
name = "matmul-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
kern-matmul = []
kern-reduction = []
kern-unary = ["dep:libm"]
kern-binary = ["dep:libm"]
kern-sort = ["dep:libm"]
kern-convolve = []
kern-linalg = ["dep:libm"]
kern-arrayops = []
kern-fft = ["dep:libm"]

[dependencies]
libm = { version = "0.2", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
